refactor: clean up code smells